# web-team

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  postman_collection.json  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: seed.py
backend/api/migrations/: 0001_initial.py  0002_cafe_closes_at_cafe_opens_at_review_and_more.py  0003_mood_cafe_moods.py  0004_badge.py
backend/apps/accounts/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/bookings/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/bookings/migrations/: 0001_initial.py
backend/apps/cafes/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
backend/apps/cafes/migrations/: 0001_initial.py
backend/apps/common/: exceptions.py
backend/back/: settings.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
frontend/: .dockerignore  .gitignore  Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.routes.ts  app.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/models/: cafe.ts
frontend/src/app/services/: auth.ts  cafe.ts  favorites.ts  reservation.ts
frontend/src/app/utils/: errors.ts  open-now.ts
src/app/: app.spec.ts  app.ts
(+24 files in other folders)
